Fix gap below footer in Chrome

--- a/style.css
+++ b/style.css
@@ -195,8 +195,15 @@ h1, h2, h3 {
     background-color: #0e1a26;
     color: #fff;
     height: 50px;
-    line-height: 50px;
     text-align: center;
+    overflow: hidden;
+    margin-top: 100px;
+}
+
+#main-footer p {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
 }
 
 @media(max-width: 800px) {
